--- a/public/upconstruction/assets/css/main.css
+++ b/public/upconstruction/assets/css/main.css
@@ -265,8 +265,8 @@ section {
 }
 
 .header .logo img {
-  max-height: 40px;
-  margin-right: 6px;
+  max-height: 4em;
+  /* margin-right: 6px; */
 }
 
 .header .logo h1 {
@@ -827,6 +827,10 @@ section {
 }
 
 @media (max-width: 575px) {
+    .header .logo img {
+        max-height: 2.5em;
+    }
+
   .features .nav-link h4 {
     font-size: 16px;
   }
